deploy/k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cip
  labels:
    app.kubernetes.io/part-of: content-insights-platform
